Fixing chart positions on smaller view sizes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -243,6 +243,7 @@ ul.list {
 
 	div.chart {
 		margin: 0 auto $ten * 2.5 auto !important;
+		text-align: center !important;
 		float: none !important;
 	}
 }
@@ -256,6 +257,7 @@ ul.list {
 
 	div.chart {
 		margin: 0 auto $ten * 2.5 auto !important;
+		text-align: center !important;
 		float: none !important;
 	}
 }
@@ -277,6 +279,7 @@ ul.list {
 
 	div.chart {
 		margin: 0 auto $ten * 2.5 auto !important;
+		text-align: center !important;
 		float: none !important;
 	}
 
